# WHATWG-Infra

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: Apple-Tests.yml  Linux-Tests.yml  Windows-Tests.yml  tests.yml
Example/: CMakeLists.txt
Test/: CMakeLists.txt  test_basic.cpp
cmake/copy-shared-lib/: command.cmake  script.cmake
docs/: README.md
example/: example_usage.cpp
examples/: CMakeLists.txt  README.md
include/: README.md  api.hpp  test.hpp
include/Softloq/: API.Softloq.WHATWG.Infra.hpp
include/Softloq/WHATWG/Infra/: Primitives.hpp  Version.hpp
include/Softloq/WHATWG/Infra/API-Library/: Macro.hpp  Precompiled.pch
include/Softloq/WHATWG/Infra/Primitive/: Boolean.hpp  Byte.hpp  ByteSequence.hpp  CodePoint.hpp  Null.hpp  Number.hpp  Primitive.hpp  PrimitiveType.hpp  Singleton.hpp  String.hpp  Time.hpp
include/Softloq/WHATWG/Infra/Primitive/Boolean/: Boolean.hpp  Formatter.tpp
include/Softloq/WHATWG/Infra/Primitive/Byte/: Byte.hpp  Formatter.tpp  OStream.inl
include/Softloq/WHATWG/Infra/Primitive/ByteSequence/: ByteSequence.hpp  Formatter.tpp  OStream.inl
include/Softloq/WHATWG/Infra/Primitive/CodePoint/: CodePoint.hpp  Formatter.tpp  OStream.inl
include/Softloq/WHATWG/Infra/Primitive/CodeUnit/: CodeUnit.hpp  Formatter.tpp  OStream.inl
include/Softloq/WHATWG/Infra/Primitive/Null/: Formatter.tpp  Null.hpp  OStream.inl
include/Softloq/WHATWG/Infra/Primitive/Number/: Integral.hpp  Number.hpp
include/Softloq/WHATWG/Infra/Primitive/Number/Int16/: Formatter.tpp  Int16.hpp  OStream.inl
include/Softloq/WHATWG/Infra/Primitive/Number/Int32/: Formatter.tpp  Int32.hpp
include/Softloq/WHATWG/Infra/Primitive/Number/Int64/: Formatter.tpp  Int64.hpp  OStream.inl
include/Softloq/WHATWG/Infra/Primitive/Number/Int8/: Int8.hpp  OStream.inl
include/Softloq/WHATWG/Infra/Primitive/Number/UInt128/: Formatter.tpp  OStream.inl  UInt128.hpp  uint128_t.hpp
include/Softloq/WHATWG/Infra/Primitive/Number/UInt16/: Formatter.tpp  OStream.inl  UInt16.hpp
include/Softloq/WHATWG/Infra/Primitive/Number/UInt32/: Formatter.tpp  UInt32.hpp
include/Softloq/WHATWG/Infra/Primitive/Number/UInt64/: OStream.inl  UInt64.hpp
include/Softloq/WHATWG/Infra/Primitive/Number/UInt8/: Formatter.tpp  OStream.inl  UInt8.hpp
include/Softloq/WHATWG/Infra/Primitive/Numbers/: All.hpp  Numbers.hpp
include/Softloq/WHATWG/Infra/Primitives/: All.hpp  Primitive.hpp  Primitives.hpp
inline/: README.md
inline/Softloq/WHATWG/Infra/Primitive/: Primitive.hpp  PrimitiveType.hpp
inline/Softloq/WHATWG/Infra/Primitive/Boolean/: Boolean.hpp  Formatter.tpp  OStream.inl
inline/Softloq/WHATWG/Infra/Primitive/Byte/: Byte.hpp  Formatter.tpp  OStream.inl
inline/Softloq/WHATWG/Infra/Primitive/ByteSequence/: ByteSequence.hpp  Formatter.tpp  OStream.inl
inline/Softloq/WHATWG/Infra/Primitive/CodePoint/: CodePoint.hpp  Formatter.tpp  OStream.inl
inline/Softloq/WHATWG/Infra/Primitive/CodeUnit/: CodeUnit.hpp  Formatter.tpp  OStream.inl
inline/Softloq/WHATWG/Infra/Primitive/Null/: Null.hpp
inline/Softloq/WHATWG/Infra/Primitive/Number/: Formatter.tpp  Integral.hpp  Number.hpp  OStream.inl
inline/Softloq/WHATWG/Infra/Primitive/Number/Int16/: Formatter.tpp  Int16.hpp  OStream.inl
inline/Softloq/WHATWG/Infra/Primitive/Number/Int32/: Formatter.tpp  Int32.hpp  OStream.inl
inline/Softloq/WHATWG/Infra/Primitive/Number/Int64/: Int64.hpp  OStream.inl
inline/Softloq/WHATWG/Infra/Primitive/Number/Int8/: Formatter.tpp  Int8.hpp  OStream.inl
inline/Softloq/WHATWG/Infra/Primitive/Number/UInt128/: Formatter.tpp  OStream.inl  UInt128.hpp  uint128_t.hpp
inline/Softloq/WHATWG/Infra/Primitive/Number/UInt16/: UInt16.hpp
inline/Softloq/WHATWG/Infra/Primitive/Number/UInt32/: Formatter.tpp  OStream.inl  UInt32.hpp
inline/Softloq/WHATWG/Infra/Primitive/Number/UInt64/: Formatter.tpp  OStream.inl  UInt64.hpp
inline/Softloq/WHATWG/Infra/Primitive/Number/UInt8/: Formatter.tpp  OStream.inl  UInt8.hpp
inline/Softloq/WHATWG/Infra/Primitive/Numbers/: All.hpp
inline/Softloq/WHATWG/Infra/Primitives/: All.hpp  Primitive.hpp  Primitives.hpp  Type.hpp
roadmap/: README.md
src/: README.md  test.cpp
src/Softloq/WHATWG/Infra/Primitive/: Byte.cpp  ByteSequence.cpp  CodePoint.cpp  Primitive.cpp  String.cpp
src/Softloq/WHATWG/Infra/Primitive/Boolean/: Boolean.cpp
src/Softloq/WHATWG/Infra/Primitive/Byte/: Byte.cpp
src/Softloq/WHATWG/Infra/Primitive/ByteSequence/: ByteSequence.cpp
src/Softloq/WHATWG/Infra/Primitive/CodePoint/: CodePoint.cpp
src/Softloq/WHATWG/Infra/Primitive/CodeUnit/: CodeUnit.cpp
src/Softloq/WHATWG/Infra/Primitive/Null/: Null.cpp
src/Softloq/WHATWG/Infra/Primitive/Number/: Number.cpp
src/Softloq/WHATWG/Infra/Primitive/Number/Int16/: Int16.cpp
src/Softloq/WHATWG/Infra/Primitive/Number/Int32/: Int32.cpp
src/Softloq/WHATWG/Infra/Primitive/Number/Int64/: Int64.cpp
src/Softloq/WHATWG/Infra/Primitive/Number/Int8/: Int8.cpp
src/Softloq/WHATWG/Infra/Primitive/Number/UInt128/: UInt128.cpp
src/Softloq/WHATWG/Infra/Primitive/Number/UInt16/: UInt16.cpp
src/Softloq/WHATWG/Infra/Primitive/Number/UInt32/: UInt32.cpp
src/Softloq/WHATWG/Infra/Primitive/Number/UInt64/: UInt64.cpp
src/Softloq/WHATWG/Infra/Primitive/Number/UInt8/: UInt8.cpp
src/Softloq/WHATWG/Infra/Primitives/: Primitive.cpp
test/: test_basic.cpp  test_primitives.cpp
tests/: CMakeLists.txt  README.md
tests/Test-Units/Primitive/: Boolean.cpp  Byte.cpp  ByteSequence.cpp  CodePoint.cpp  CodeUnit.cpp  Null.cpp  Number.cpp
tests/Test-Units/Primitives/: Null.cpp
